# Heartbeat

./: CMakeLists.txt  README.MD  client.c  heartbeat.c  heartbeat.h  server.c
lib/: client.c  client.h  heartbeat.c  heartbeat.h  server.c  server.h  socket.h
lib/icmp/: ping.c  ping.h
lib/tcp/: client.c  client.h  server.c  server.h
lib/telegram/: telegram.c  telegram.h
